# parca

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.ru_RU.UTF-8  build-msvc.cmd  parca  parca.cmd  parca.spec  parca_soap.conf
init.d/: parca_server
python/: CMakeLists.txt
python/parca/: CMakeLists.txt  __init__.py  __main__.py  _base.py  _custom_matrices.py  _util.py  soap_server.py
src/: CMakeLists.txt  _parca.cpp  _parca.h  a.cpp  a.h  matrix.cpp  matrix.h  pareto.cpp  pareto.h
test/: custom_matrix.py  native_language.py  simple_example.py  soap_test.py
